--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>CYCLERS||STUDIOS</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="./scss/styless.css">
-    <link rel="stylesheet" href="./css/header.css">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
 
 
@@ -44,7 +44,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="index.html" class="navbar__links">Home</a>
+                    <a href="./landing/landing.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="#about" class="navbar__links">About Us</a>
@@ -91,7 +91,7 @@
         <div class="main__img--container wave">
           <img class = "single-wave" id="main__img" src="images/compressed-mic.png" />
 
-          
+
         </div>
       </div>
     </div> -->
@@ -161,10 +161,10 @@
                 </div>
             </div>
 
-
             <!-- Back and forward buttons -->
             <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
             <a class="forward" onclick="plusSlides(1)">&#10095;</a>
+
         </div>
         <br>
 
@@ -219,6 +219,10 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Back and forward buttons
+                    <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="forward" onclick="plusSlides(1)">&#10095;</a> -->
                 </div>
 
             </div>
@@ -267,7 +271,7 @@
                         <div class="live-equipment">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description js-scroll slide-right">
-                                <h1>Conducive environment.</h1>
+                                <h1>Conducive environment</h1>
                                 <p>Compelling and Irresistible ambience </p>
                             </div>
                         </div>
@@ -294,7 +298,7 @@
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description js-scroll slide-right">
                                 <h1>Customer Satisfaction<br> Guarantee</h1>
-                                <p>Satisfying you is our delight. </p>
+                                <p>Satisfying you is our delight </p>
                             </div>
                         </div>
                         <!-- <div class="protection">
@@ -308,8 +312,8 @@
                         <div class="own-arrangements">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="own-arrangements-description js-scroll slide-left">
-                                <h1>Value overload.</h1>
-                                <p>We give you more than your expectations. </p>
+                                <h1>Value overload</h1>
+                                <p>We give you more than your expectations </p>
                             </div>
                         </div>
                     </div>
@@ -344,9 +348,9 @@
                         <img src="./images/IMG_3051x-1.jpg" alt="">
                         <div class="img-text">
                             <div class="cont">
-                                <h4>Head Shot</h4>
+                                <h4>Shoot Videos</h4>
 
-                                <p> <a href="./headshot/headshot.html">VIEW MORE</a></p>
+                                <p> <a href="./headshot/headshot.html">View More</a></p>
 
 
 
@@ -360,7 +364,8 @@
                             <div class="cont">
                                 <h4>INDOOR</h4>
 
-                                <p>Photoshoot</p>
+                                <p>
+                                    <a href="./photoshoot/photo.html">Photoshoot</a></p>
                             </div>
                         </div>
                     </div>
@@ -369,9 +374,9 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>OUTDOOR</h4>
-                                <a href="./photoshoot/photo.html">
-                                    <p>Photo Shoot</p>
-                                </a>
+                                <p> <a href="./photoshoot/photo.html">
+                                    Photo Shoot 
+                                </a></p>
                             </div>
                         </div>
                     </div>
@@ -380,7 +385,7 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>AUDIO</h4>
-                                <p>Sound Mixing</p>
+                                <p><a href="./headshot/headshot.html">Sound Mixing</a></p>
                             </div>
                         </div>
                     </div>
@@ -389,7 +394,7 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>CYCLERS CONCERT</h4>
-                                <p>Event Management</p>
+                                <p><a href="./headshot/headshot.html">Event Management</a></p>
                             </div>
                         </div>
                     </div>
@@ -399,7 +404,7 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>WEDDINGS/BIRTHDAYS</h4>
-                                <p>Event Management</p>
+                                <p><a href="./headshot/headshot.html">Event Management</a></p>
                             </div>
                         </div>
                     </div>
@@ -432,9 +437,10 @@
                             <img src="/images/manager.jpg" alt="Team Image">
                         </div>
                         <div class="team-content">
-                            <h2 style="font-size: 15px" ;>Mary Odogbo</h2>
+                            <h2>Mary Odogbo</h2>
                             <h3>General Manager</h3>
-                            <p>Mary helped in sourcing for funds in organizing "the Cyclers Concert". Mary is inspired daily by her family. </p>
+                            <!-- <p>Mary helped in sourcing for funds in organizing "the Cyclers Concert". Mary is inspired daily by her family. </p>
+                            -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/marye_mareey" class="fab fa-instagram" target="_blank"></a>
@@ -463,7 +469,7 @@
                         <div class="team-content">
                             <h2>Ekpere Godwin</h2>
                             <h3>Marketing Manager</h3>
-                            <p>Team Work<br>Promptness<br>Strategic</p>
+                            <!-- <p>Team Work<br>Promptness<br>Strategic</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/Ekpvegreata" class="fab fa-instagram"></a>
@@ -489,9 +495,9 @@
                             <img src="/images/marketer.jpg" alt="Team Image">
                         </div>
                         <div class="team-content">
-                            <h2>Ohwofasa Clinton</h2>
+                            <h2 style="font-size: 20px;">Ohwofasa Clinton</h2>
                             <h3>Marketer</h3>
-                            <p>Explorer</p>
+                            <!-- <p>Explorer</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/Bob_klint" class="fab fa-instagram"></a>
@@ -519,7 +525,7 @@
                         <div class="team-content">
                             <h2>Asowata Esosa</h2>
                             <h3>Photographer</h3>
-                            <p>I love showing the beauty of people through my pictures.</p>
+                            <!-- <p>I love showing the beauty of people through my pictures.</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/esosaasowata" class="fab fa-instagram"></a>
@@ -549,7 +555,7 @@
                         <div class="team-content">
                             <h2>Great Jonacs</h2>
                             <h3>Photographer</h3>
-                            <p>I am a photographer and Canon lover, I also like them big and hot! </p>
+                            <!-- <p>I am a photographer and Canon lover, I also like them big and hot! </p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/Kingsman_photo" class="fab fa-instagram"></a>
@@ -577,7 +583,7 @@
                         <div class="team-content">
                             <h2>Simon Ekakabor</h2>
                             <h3>Photographer</h3>
-                            <p>I'm a Creative and Hard working Portraits and event photographer. </p>
+                            <!-- <p>I'm a Creative and Hard working Portraits and event photographer. </p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="http://instagram.com/simon_keys" class="fab fa-instagram"></a>
@@ -603,9 +609,9 @@
                             <img src="/images/videographer.jpg" alt="Team Image">
                         </div>
                         <div class="team-content">
-                            <h2 style="font-size: 22px;">Joshua Osasogie</h2>
+                            <h2 style="font-size: 20px;">Joshua Osasogie</h2>
                             <h3>Videographer</h3>
-                            <p>I am a professional Videographer and video editor.</p>
+                            <!-- <p>I am a professional Videographer and video editor.</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="#" class="fab fa-instagram"></a>
@@ -632,7 +638,7 @@
                         <div class="team-content">
                             <h2 style="font-size: 15px;">Deborah Ezinne Ifegwu </h2>
                             <h3>Content creator/Social media manager </h3>
-                            <p style="font-size: 12px;">Deborah is a social butterfly, she enjoys beauty and fashion contents. Totally a social media person and is passionate about her job. .</p>
+                            <!-- <p style="font-size: 12px;">Deborah is a social butterfly, she enjoys beauty and fashion contents. Totally a social media person and is passionate about her job. .</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/babygirlbutter " class="fab fa-instagram"></a>
@@ -657,9 +663,9 @@
                             <img src="/images/gil.jpeg" alt="Team Image">
                         </div>
                         <div class="team-content">
-                            <h2 style="font-size: 15px;">Gilgal Umia </h2>
+                            <h2>Gilgal Umia </h2>
                             <h3>Content Creator </h3>
-                            <p style="font-size: 12px;">Multi-award winner with a rich blend of experience and expertise in content writing. I breathe content</p>
+                            <!-- <p style="font-size: 12px;">Multi-award winner with a rich blend of experience and expertise in content writing. I breathe content</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/gilgal_umia?utm_medium=copy_link" class="fab fa-instagram"></a>
@@ -687,7 +693,7 @@
                         <div class="team-content">
                             <h2>Shola Umakhihe</h2>
                             <h3>Web Developer</h3>
-                            <p>I solve complex problems with codes...<br>when not coding, i decorate</p>
+                            <!-- <p>I solve complex problems with codes...<br>when not coding, i decorate</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/sholaumakhihe" class="fab fa-instagram"></a>
@@ -931,14 +937,13 @@
     <script src="js/app.js"></script>
     <script src="./js/header.js"></script>
     <script src="js/scroll.js"></script>
-    <script src="js/carousel.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--     
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/js/load-more-button.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js">
-    </script>
+
 </body>
 
 </html>
