--- a/landing/landing.html
+++ b/landing/landing.html
@@ -5,46 +5,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./landing.css">
     <title>Document</title>
 </head>
 
 <body>
-    <!--
+    <section class="news-section">
 
-Follow me on
-Dribbble: https://dribbble.com/supahfunk
-Twitter: https://twitter.com/supahfunk
-Codepen: https://codepen.io/supah/
+        <div class="container">
+            <div class="row">
+                <!--Single Blog Start-->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0ms">
+                    <div class="news-item">
+                        <div class="news_box">
+                            <div class="newsimg"><img class="img-responsive" src="https://i.ibb.co/CKNmhMX/blog1.jpg.jpg" alt=""></div>
+                            <div class="news-content">
+                                <div class="news_postdate">
+                                    <span>Jan 03, 2019</span>
+                                </div>
+                                <a href="#">
+                                    <h3>The Future of Digital Marketing</h3>
+                                </a>
+                                <p>Lorem ipsum dolor sit amet, cons ectet a ur elit. Vestibulum necod ios suspe age a to ndisse cursus mal.</p>
+                                <div class="news_authorinfo">
+                                    <span><i class="fa fa-user"></i>  <a href="">Robert Tylor </a></span>
+                                    <span><i class="fa fa-comment"></i> <a href="">Comments: (2)</a></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Single Blog End-->
 
--->
-    <div class="split-slideshow">
-        <div class="slideshow">
-            <div class="slider">
-                <div class="item">
-                    <img src="https://raw.githubusercontent.com/supahfunk/supah-codepen/master/canyon-2.jpg" />
+                <!--Single Blog Start-->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="400ms">
+                    <div class="news-item active">
+                        <div class="news_box">
+                            <div class="newsimg"><img class="img-responsive" src="https://i.ibb.co/m5yGbdR/blog2.jpg" alt=""></div>
+                            <div class="news-content">
+                                <div class="news_postdate">
+                                    <span>Nov 05, 2018</span>
+                                </div>
+                                <a href="#">
+                                    <h3>Successful content marketing plan </h3>
+                                </a>
+                                <p>Lorem ipsum dolor sit amet, cons ectet a ur elit. Vestibulum necod ios suspe age a to ndisse cursus mal.</p>
+                                <div class="news_authorinfo">
+                                    <span><i class="fa fa-user"></i>  <a href="">Jessica keri</a></span>
+                                    <span><i class="fa fa-comment"></i> <a href="">Comments: (1)</a></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="item">
-                    <img src="https://raw.githubusercontent.com/supahfunk/supah-codepen/master/canyon-3.jpg" />
+                <!--Single Blog End-->
+                <!--Single Blog Start-->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="400ms">
+                    <div class="news-item active">
+                        <div class="news_box">
+                            <div class="newsimg"><img class="img-responsive" src="https://i.ibb.co/m5yGbdR/blog2.jpg" alt=""></div>
+                            <div class="news-content">
+                                <div class="news_postdate">
+                                    <span>Nov 05, 2018</span>
+                                </div>
+                                <a href="#">
+                                    <h3>Successful content marketing plan </h3>
+                                </a>
+                                <p>Lorem ipsum dolor sit amet, cons ectet a ur elit. Vestibulum necod ios suspe age a to ndisse cursus mal.</p>
+                                <div class="news_authorinfo">
+                                    <span><i class="fa fa-user"></i>  <a href="">Jessica keri</a></span>
+                                    <span><i class="fa fa-comment"></i> <a href="">Comments: (1)</a></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="item">
-                    <img src="https://raw.githubusercontent.com/supahfunk/supah-codepen/master/canyon-4.jpg" />
-                </div>
-                <div class="item">
-                    <img src="https://raw.githubusercontent.com/supahfunk/supah-codepen/master/canyon-1.jpg" />
-                </div>
+                <!--Single Blog End-->
             </div>
         </div>
-        <div class="slideshow-text">
-            <div class="item">Canyon</div>
-            <div class="item">Desert</div>
-            <div class="item">Erosion</div>
-            <div class="item">Shape</div>
-        </div>
-    </div>
-
-    <a class="the-most" target="_blank" href="https://codepen.io/2017/popular/pens/10/">
-        <img src="https://raw.githubusercontent.com/supahfunk/supah-codepen/master/themost-2017.png">
-    </a>
+    </section>
 </body>
 
 </html>
