--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                             <div class="cont">
                                 <h4>Shoot Videos</h4>
 
-                                <p> <a href="./headshot/headshot.html">View More</a></p>
+                                <p> <a href="./video production/video.html">View More</a></p>
 
 
 
@@ -374,7 +374,7 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>OUTDOOR</h4>
-                                <p> <a href="./photoshoot/photo.html">
+                                <p> <a href="./Outdoor/outdoor.html">
                                     Photo Shoot 
                                 </a></p>
                             </div>
@@ -385,7 +385,7 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>AUDIO</h4>
-                                <p><a href="./headshot/headshot.html">Sound Mixing</a></p>
+                                <p><a href="./sound_production/sound.html">Sound Mixing</a></p>
                             </div>
                         </div>
                     </div>
@@ -394,7 +394,7 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>CYCLERS CONCERT</h4>
-                                <p><a href="./headshot/headshot.html">Event Management</a></p>
+                                <p><a href="./concert/concert.html">Event Management</a></p>
                             </div>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                         <div class="img-text">
                             <div class="cont">
                                 <h4>WEDDINGS/BIRTHDAYS</h4>
-                                <p><a href="./headshot/headshot.html">Event Management</a></p>
+                                <p><a href="./event/event.html">Event Management</a></p>
                             </div>
                         </div>
                     </div>
@@ -937,6 +937,7 @@
     <script src="js/app.js"></script>
     <script src="./js/header.js"></script>
     <script src="js/scroll.js"></script>
+    <script src="./js/load-more-button.js"></script>
     <!--     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
