--- a/photoshoot/photo.html
+++ b/photoshoot/photo.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CYCLERS||STUDIO </title>
+    <title>CYCLERS||STUDIO||Indoor</title>
 
     <link rel="icon" type="image/png" sizes="132x132" href="../images/cycler1-.png" />
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
