--- a/concert/concert.html
+++ b/concert/concert.html
@@ -65,7 +65,7 @@
 
 
     <!-- partial:index.partial.html -->
-    <hr>
+
     <div id="gallery" class="container-fluid">
         <img src="./images/DSC_0736---Copy.jpg" class="img-responsive">
         <img src="./images/DSC_0738.jpg" class="img-responsive">
@@ -76,6 +76,10 @@
         </video> -->
         <img src="./images/DSC_0879.jpg" class="img-responsive">
         <img src="./images/DSC_1180.jpg" class="img-responsive">
+        <img src="./images/DSC_6831.jpg" class="img-responsive">
+        <img src="./images/DSC_6888.jpg" class="img-responsive">
+        <img src="./images/DSC_7032-2.jpg" class="img-responsive">
+        <img src="./images/DSC_7033-2.jpg" class="img-responsive">
 
 
     </div>
