--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Audio Recording, Mixing, Editing, mastering, Live Session" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CYCLERS||STUDIOS</title>
+    <title>Home - Cyclers Studio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="./scss/styless.css">
 
@@ -714,7 +714,7 @@
 
 
                 <div id="loadMore">
-                    <a href="#">Load More</a>
+                    <a href="">Load More</a>
                 </div>
 
             </div>
@@ -934,14 +934,14 @@
         </div>
     </section>
 
-    <script src="js/app.js"></script>
-    <script src="./js/header.js"></script>
-    <script src="js/scroll.js"></script>
+    <script src="./js/app.js"></script>
+
+    <script src="./js/scroll.js"></script>
     <script src="./js/load-more-button.js"></script>
     <!--     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/js/load-more-button.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     </script>
 
