--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
 
 
-                <div class="column blogBox moreBox hidden">
+                <div class="column blogBox moreBox hidden" style="display: none;">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="images/photographer1.jpg" alt="Team Image">
@@ -575,7 +575,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox hidden">
+                <div class="column blogBox moreBox hidden" style="display: none;">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/photographer3.jpg" alt="Team Image">
@@ -603,7 +603,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox hidden">
+                <div class="column blogBox moreBox hidden" style="display: none;">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/videographer.jpg" alt="Team Image">
@@ -630,7 +630,7 @@
                 </div> -->
                     </div>
                 </div>
-                <div class="column blogBox moreBox hidden">
+                <div class="column blogBox moreBox hidden" style="display: none;">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/ezinnee.jpg" alt="Team Image">
@@ -657,7 +657,7 @@
                 </div> -->
                     </div>
                 </div>
-                <div class="column blogBox moreBox hidden">
+                <div class="column blogBox moreBox" style="display: none;">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/gil.jpeg" alt="Team Image">
@@ -685,7 +685,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox hidden">
+                <div class="column blogBox moreBox" style="display: none;">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/dev.jpg" alt="Team Image">
@@ -714,7 +714,7 @@
 
 
                 <div id="loadMore">
-                    <a href="">Load More</a>
+                    <a href="#">Load More</a>
                 </div>
 
             </div>
@@ -938,8 +938,8 @@
 
     <script src="./js/scroll.js"></script>
     <script src="./js/load-more-button.js"></script>
-    <!--     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
