--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
 
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
     <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' />
     <link rel="icon" type="image/png" sizes="132x132" href="./images/cycler1-.png" />
 
@@ -547,7 +547,7 @@
 
 
 
-                <div class="column blogBox moreBox hidden" style="display: none;">
+                <div class="column blogBox moreBox">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="images/photographer1.jpg" alt="Team Image">
@@ -575,7 +575,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox hidden" style="display: none;">
+                <div class="column blogBox moreBox ">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/photographer3.jpg" alt="Team Image">
@@ -603,7 +603,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox hidden" style="display: none;">
+                <div class="column blogBox moreBox ">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/videographer.jpg" alt="Team Image">
@@ -630,7 +630,7 @@
                 </div> -->
                     </div>
                 </div>
-                <div class="column blogBox moreBox hidden" style="display: none;">
+                <div class="column blogBox moreBox ">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/ezinnee.jpg" alt="Team Image">
@@ -657,7 +657,7 @@
                 </div> -->
                     </div>
                 </div>
-                <div class="column blogBox moreBox" style="display: none;">
+                <div class="column blogBox moreBox">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/gil.jpeg" alt="Team Image">
@@ -685,7 +685,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox" style="display: none;">
+                <div class="column blogBox moreBox">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/dev.jpg" alt="Team Image">
@@ -713,9 +713,9 @@
                 </div>
 
 
-                <div id="loadMore">
+                <!-- <div id="loadMore">
                     <a href="#">Load More</a>
-                </div>
+                </div> -->
 
             </div>
 
