--- a/video production/video.html
+++ b/video production/video.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CYCLERS||STUDIO </title>
+    <title>Videos - Cyclers Studio </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="icon" type="image/png" sizes="132x132" href="../images/cycler1-.png" />
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
@@ -74,8 +74,8 @@
 
         <div class="video-gallery">
 
-            <div class="gallery-item ">
-                <img src="../landing_images/IMG_5147.jpg" alt="" />
+            <div class="gallery-item">
+                <img src="./images/intro.jpg" alt="" />
                 <div class="gallery-item-caption">
                     <!--<div>-->
                     <h2>Intro</h2>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="gallery-item">
-                <img src="../images/even2.jpg" alt="" />
+                <img src="./images/birthday.jpg" alt="" />
                 <div class="gallery-item-caption">
                     <!--<div>-->
                     <h2>Birthday Bash</h2>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="gallery-item">
-                <img src="../event/images/photo_2022-03-23_12-58-44.jpg" class="north-cascades-img" alt="" />
+                <img src="../images/even2.jpg" class="north-cascades-img" alt="" />
                 <div class="gallery-item-caption">
                     <!--<div>-->
                     <h2>Wedding</h2>
@@ -108,7 +108,7 @@
             </div>
 
             <div class="gallery-item">
-                <img src="../landing_images/3.jpg" alt="" />
+                <img src="../event/images/photo_2022-03-23_12-58-44.jpg" alt="" />
                 <div class="gallery-item-caption">
                     <!--<div>-->
                     <h2>Event</h2>
